--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>網址轉換QR</title>
-        <link rel="stylesheet" href="scss/all.css">
+        <link rel="stylesheet" href="css/all.css">
     </head>
 
     <body>
