--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>網址轉換QR</title>
-        <link rel="stylesheet" href="scss/all.scss">
+        <link rel="stylesheet" href="css/all.css">
     </head>
 
     <body>
         <div class="wrap">
             <div class="header">
-                <img src="https://images.unsplash.com/photo-1530989166579-96a5923c8ce5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60"
+                <img src="img/photo-1530989166579-96a5923c8ce5.jpg"
                     width="300px;" height="300px;">
             </div>
             <div class="content">
