--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <form action="#" method="post">
                     <div class="nameGrounp">
                         <label for="name">網址</label>
-                        <input type="text" id="name" placeholder="elmpamt.com">
+                        <input type="text" id="name" placeholder="https://example.com">
                     </div>
                     <div class="sizeGroup">
                         <label for="size">圖片大小</label>
