修正部分錯誤及增加default

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <div class="sizeGroup">
                         <label for="size">圖片大小</label>
                         <select name="size" id="imgSize">
+                            <option value="" disabled>請選擇尺寸</option>
                             <option value="0">120x120</option>
                             <option value="1">200x200</option>
                             <option value="2">400x400</option>
